--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,16 +10,22 @@ steps:
         REPO_NAME=$REPO_NAME
         BRANCH_NAME=$BRANCH_NAME
         COMMIT_SHA=$COMMIT_SHA
+        PROJECT_ID=$PROJECT_ID
         
-        # Get commit details
+        # Get commit details using git commands
         COMMIT_MSG=$(git log -1 --pretty=format:"%s")
-        COMMIT_AUTHOR=$(git log -1 --pretty=format:"%an")
-        COMMIT_EMAIL=$(git log -1 --pretty=format:"%ae")
+        AUTHOR_NAME=$(git log -1 --pretty=format:"%an")
+        AUTHOR_EMAIL=$(git log -1 --pretty=format:"%ae")
         
         # Get modified files
-        ADDED_FILES=$(git diff-tree --no-commit-id --name-only -r $COMMIT_SHA --diff-filter=A | jq -R -s -c 'split("\n")[:-1]')
-        MODIFIED_FILES=$(git diff-tree --no-commit-id --name-only -r $COMMIT_SHA --diff-filter=M | jq -R -s -c 'split("\n")[:-1]')
-        REMOVED_FILES=$(git diff-tree --no-commit-id --name-only -r $COMMIT_SHA --diff-filter=D | jq -R -s -c 'split("\n")[:-1]')
+        ADDED_FILES=$(git diff-tree --no-commit-id --name-only -r $COMMIT_SHA --diff-filter=A | jq -R -s -c 'split("\n")[:-1]' || echo "[]")
+        MODIFIED_FILES=$(git diff-tree --no-commit-id --name-only -r $COMMIT_SHA --diff-filter=M | jq -R -s -c 'split("\n")[:-1]' || echo "[]")
+        REMOVED_FILES=$(git diff-tree --no-commit-id --name-only -r $COMMIT_SHA --diff-filter=D | jq -R -s -c 'split("\n")[:-1]' || echo "[]")
+        
+        echo "Repository: $REPO_NAME"
+        echo "Branch: $BRANCH_NAME"
+        echo "Commit: $COMMIT_SHA"
+        echo "Author: $AUTHOR_NAME"
         
         # Create JSON payload
         cat > /workspace/event.json << EOF
@@ -30,16 +36,16 @@ steps:
           },
           "ref": "refs/heads/$BRANCH_NAME",
           "pusher": {
-            "name": "$COMMIT_AUTHOR",
-            "email": "$COMMIT_EMAIL"
+            "name": "$AUTHOR_NAME",
+            "email": "$AUTHOR_EMAIL"
           },
           "commits": [
             {
               "id": "$COMMIT_SHA",
               "message": "$COMMIT_MSG",
               "author": {
-                "name": "$COMMIT_AUTHOR",
-                "email": "$COMMIT_EMAIL"
+                "name": "$AUTHOR_NAME",
+                "email": "$AUTHOR_EMAIL"
               },
               "added": $ADDED_FILES,
               "modified": $MODIFIED_FILES,
